--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 {% block title %}¡Gracias!{% endblock %}
-
 {% block content %}
-<h1>¡Gracias!</h1>
-<p class="muted">Tus respuestas se han registrado correctamente.</p>
+  <h2>Gracias por completar el test.</h2>
 {% endblock %}
